added logic to prevent overbooking and booking when there are no seats
